commands and server were updated